<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="profile_title">Profile</string>
    <string name="profile_first_name">First Name: </string>
    <string name="profile_last_name">Last Name: </string>
    <string name="profile_email">Email: </string>
    <string name="profile_account_type">Account Type: </string>
    <string name="profile_sign_out">Sign Out: </string>
</resources>
