<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/title_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_bottom"
        android:elevation="@dimen/elevation_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/ProfileTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginHorizontal="@dimen/profile_title_margin_horizontal"
            android:layout_marginTop="@dimen/profile_title_margin_top"
            android:layout_marginBottom="@dimen/profile_title_margin_bottom"
            android:text="@string/profile_title" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_details_container_margin_top"
        android:background="@drawable/bg_rounded"
        android:elevation="@dimen/elevation_8"
        app:layout_constraintBottom_toTopOf="@id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_container"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/first_name_detail"
            style="@style/ProfileDetailsTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/profile_detail_margin_horizontal"
            android:layout_marginTop="@dimen/profile_detail_margin_top"
            android:text="@string/profile_first_name"
            app:layout_constraintEnd_toEndOf="@id/center_vertical_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/first_name"
            style="@style/ProfileDetailsTextValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/profile_detail_value_margin_horizontal"
            android:layout_marginTop="@dimen/profile_details_value_margin_top"
            app:layout_constraintEnd_toEndOf="@id/center_vertical_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name_detail"
            tools:text="Luka" />

        <TextView
            android:id="@+id/last_name_detail"
            style="@style/ProfileDetailsTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/profile_detail_margin_horizontal"
            android:layout_marginTop="@dimen/profile_detail_margin_top"
            android:text="@string/profile_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/center_vertical_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/last_name"
            style="@style/ProfileDetailsTextValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/profile_detail_value_margin_horizontal"
            android:layout_marginTop="@dimen/profile_details_value_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/center_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/last_name_detail"
            tools:text="Mijic" />

        <TextView
            android:id="@+id/email_detail"
            style="@style/ProfileDetailsTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/profile_detail_margin_horizontal"
            android:layout_marginTop="@dimen/profile_detail_margin_top"
            android:text="@string/profile_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name" />

        <TextView
            android:id="@+id/email"
            style="@style/ProfileDetailsTextValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/profile_detail_value_margin_horizontal"
            android:layout_marginTop="@dimen/profile_details_value_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_detail"
            tools:text="luka.mijic@gmail.com" />

        <TextView
            android:id="@+id/user_type_detail"
            style="@style/ProfileDetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/profile_detail_margin_horizontal"
            android:layout_marginTop="@dimen/profile_detail_margin_top"
            android:layout_marginBottom="@dimen/profile_user_type_margin_bottom"
            android:text="@string/profile_account_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/user_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/user_type"
            style="@style/ProfileDetailsTextValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/profile_user_type_value_margin_start"
            android:layout_marginEnd="@dimen/profile_detail_value_margin_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/user_type_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_type_detail"
            app:layout_constraintTop_toTopOf="@id/user_type_detail"
            tools:text="OWNER" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.toprest.commonui.view.AccentButton
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/profile_logout_button_margin_horizontal"
        android:layout_marginVertical="@dimen/profile_logout_button_margin_vertical"
        android:text="@string/profile_sign_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
